# RTB-Robins-ToolBox

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  RTB LOGO.txt  Todo-List.md
bench/: CMakeLists.txt
cmake/: Checks.cmake  CompileOptions.cmake
dev/: CMakeLists.txt  Dev.cpp
examples/: CMakeLists.txt
inc/: Colour.hpp  Ellipsoid.hpp  Line.hpp  Math.hpp  Mixer.hpp  Plane.hpp  Point.hpp  RTB.hpp  Random.hpp  Ray.hpp  Standards.hpp  Timer.hpp  Vector.hpp
inc/RTB/: Colour.hpp  Ellipse.hpp  Ellipsoid.hpp  Math.hpp  Mixer.hpp  Plane.hpp  Point.hpp  RTB.hpp  Random.hpp  Ray.hpp  Standards.hpp  Timer.hpp  Vector.hpp
test/: CMakeLists.txt  Ellipse_test.cpp  Ellipsoid_test.cpp  Math_test.cpp  Plane_test.cpp  Point_test.cpp  Random_test.cpp  Ray_test.cpp  Stupid.cpp  Timer_test.cpp  Vector_test.cpp
